--- a/server/package.json
+++ b/server/package.json
@@ -609,6 +609,7 @@
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
     "react-error-overlay": "^6.0.11",
+    "react-icons": "^4.8.0",
     "react-is": "^17.0.2",
     "react-refresh": "^0.11.0",
     "react-scripts": "^5.0.1",
