--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "aos": "^3.0.0-beta.6",
     "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
+    "cloudinary": "^1.36.2",
     "hamburger-react": "^2.5.0",
     "mongoose": "^7.0.3",
     "react": "^18.2.0",
