--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
     "cloudinary": "^1.36.2",
+    "cloudinary-react": "^1.8.1",
     "hamburger-react": "^2.5.0",
     "mongoose": "^7.0.3",
     "react": "^18.2.0",
