--- a/server/package.json
+++ b/server/package.json
@@ -457,6 +457,7 @@
     "mkdirp": "^0.5.6",
     "mongoose": "^7.0.3",
     "ms": "^2.1.2",
+    "multer": "^1.4.5-lts.1",
     "multicast-dns": "^7.2.5",
     "nanoid": "^3.3.6",
     "natural-compare": "^1.4.0",
