--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,21 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-edit-text": "^5.0.1",
     "aos": "^3.0.0-beta.6",
+    "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
+    "cloudinary": "^1.36.2",
+    "cloudinary-react": "^1.8.1",
+    "hamburger-react": "^2.5.0",
+    "mongoose": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.9.0",
-    "react-scripts": "5.0.1",
+    "react-edit-text": "^5.1.0",
+    "react-icons": "^4.8.0",
+    "react-json-to-csv": "^1.2.0",
+    "react-router-dom": "^6.10.0",
+    "react-scripts": "^5.0.1",
     "reactstrap": "^9.1.8",
     "web-vitals": "^2.1.4"
   },
@@ -41,22 +50,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.9.0",
-    "reactdom": "^2.0.0",
-    "reactstrap": "^9.1.6"
-  },
-  "name": "client",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  }
 }
